refactor: decouple code to improve modularity and maintainability