@@ -1,51 +1,52 @@
 package cn.wxiach;
 
-import cn.wxiach.core.ai.pattern.Pattern;
-import cn.wxiach.core.ai.pattern.support.AhoCorasickAutomaton;
+import cn.wxiach.ai.support.AhoCorasickAutomaton;
+import cn.wxiach.ai.support.CharSequenceConverter;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class AhoCorasickAutomatonTest {
+class AhoCorasickAutomatonTest {
 
-    private AhoCorasickAutomaton ahoCorasickAutomaton;
+    private AhoCorasickAutomaton<String> automaton;
+
+    private static class StringConverter implements CharSequenceConverter<String> {
+        @Override
+        public CharSequence toCharSequence(String s) {
+            return s;
+        }
+    }
 
     @BeforeEach
     void setUp() {
-        List<Pattern<String>> patterns = List.of(
-                new Pattern<>("AAAA", 100),
-                new Pattern<>("BBB", 50),
-                new Pattern<>("CC", 20)
-        );
-
-        ahoCorasickAutomaton = new AhoCorasickAutomaton(patterns);
+        automaton = new AhoCorasickAutomaton<>(Arrays.asList("he", "she", "his", "hers"), new StringConverter());
     }
 
     @Test
-    void testSinglePatternMatch() {
-        Set<Pattern<String>> matches = ahoCorasickAutomaton.search("XXAAAAXX");
-        assertEquals(1, matches.size());
-        assertTrue(matches.contains(new Pattern<>("AAAA", 100)));
-    }
-
-    @Test
-    void testMultipleMatches() {
-        Set<Pattern<String>> matches = ahoCorasickAutomaton.search("XXBBBCCAAAAXX");
-        assertEquals(3, matches.size());
-        assertTrue(matches.contains(new Pattern<>("AAAA", 100)));
-        assertTrue(matches.contains(new Pattern<>("BBB", 50)));
-        assertTrue(matches.contains(new Pattern<>("CC", 20)));
+    void testInsertAndSearch() {
+        Set<String> result = automaton.search("ushers");
+        Set<String> expected = new HashSet<>(Arrays.asList("she", "he", "hers"));
+        assertEquals(expected, result, "Search should find correct patterns");
     }
 
     @Test
     void testNoMatch() {
-        Set<Pattern<String>> matches = ahoCorasickAutomaton.search("XYZXYZXYZ");
-        assertTrue(matches.isEmpty());
+        Set<String> result = automaton.search("randomtext");
+        assertTrue(result.isEmpty(), "Search should return empty set when no matches found");
     }
 
+    @Test
+    void testSinglePatternMatch() {
+        Set<String> result = automaton.search("his");
+        assertTrue(result.contains("his"), "Search should detect exact pattern");
+    }
 }
+
+
+
